# SegmentationApp

./: .gitignore  CaseSelector.py  GHD_dataset.ipynb  MaskViewer.py  NEWTASK.md  NEWTASK.txt  README.md  Segmentor  Segmentor.py  ThreeDViewer.py  ViewHelper  ViewHelper.py  app.py  features.txt  gettingimpath  masktopoints  oldsave2.txt  polygon.py  polygon2  polygonctk  polygonresizable.py  polygonresize  polygonrewrite  pyproject.toml  requirements.txt  save.txt  scrollableframe  tempCodeRunnerFile.py  testingresize  utils.py  viewhelper  viewhelpercanvas  viewhelperrewrite
compatibility/: Segmentor.py  ViewHelper.py
scripts/: 2.create_niftis_motion.ipynb
