[tool.poetry]
name = "segmentationapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
altgraph = "0.17.4"
contourpy = "1.3.0"
ctk-color-picker-alpha = "0.8.9"
ctkcolorpicker = "0.9.0"
ctkmenubar = "0.8"
ctkmessagebox = "2.7"
customtkinter = "5.2.2"
cycler = "0.12.1"
darkdetect = "0.8.0"
fonttools = "4.53.1"
kiwisolver = "1.4.7"
matplotlib = "3.9.2"
numpy = "1.26.4"
opencv-python = "4.10.0.84"
packaging = "24.1"
pefile = "2024.8.26"
pillow = "10.3.0"
pyparsing = "3.1.4"
python-dateutil = "2.9.0.post0"
pywin32-ctypes = "0.2.3"
scipy = "1.14.1"
setuptools = "72.1.0"
six = "1.16.0"
wheel = "0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
